[project]
name = "deepdue"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "httpx",
    "python-dotenv", 
    "pytest",
    "pydantic",
    "langgraph",
    "fastapi[standard]",
    "pydantic-settings",
    "litellm",
    "langsmith",
    "qdrant-client"
]

[project.optional-dependencies]
dev = [
  "langgraph-cli[inmem]",
]

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["deepdue*"]

[project.scripts]
dev = "deepdue.serve.api:main"